unpackaged/main/default/objects/QuoteLineItem/fields/Insertion_Type__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Type__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insertion Type</label>
    <type>Text</type>
</CustomField>