unpackaged/main/default/objects/QuoteLineItem/fields/Length_of_License__c.field-meta.xml
<CustomField>
    <fullName>Length_of_License__c</fullName>
    <formula>TEXT(FLOOR((Product2.Duration_Days__c / 356))) &amp; " Year(s)"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of License</label>
    <type>Text</type>
</CustomField>