unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Card_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Price_1__c</fullName>
    <label>Rate Card Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>