unpackaged/main/default/objects/QuoteLineItem/fields/Rate_Card_Price__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Price__c</fullName>
    <formula>PricebookEntry.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Card Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>